# ArchesWeatherSR

./: .gitignore  LICENSE  README.md  pyproject.toml  train.py
archesweathersr/backbones/: archesweather.py  archesweather_layers.py  dit.py
archesweathersr/backbones/weatherlearn_utils/: crop.py  earth_position_index.py  patch_embed.py  patch_recovery.py  shift_window_mask.py
archesweathersr/dataloaders/: era5.py  era5_hdf5.py  hdf5.py  netcdf.py
archesweathersr/inference/: infer_forecasts.py  infer_trajectory.py
archesweathersr/lightning_modules/: sr_flow_matching.py
archesweathersr/stats/: era5_1440x721_norm_stats_1979-2018.pt  sr_residual_norm_bicubic.pt  sr_residual_norm_linear.pt
archesweathersr/utils/: logging_utils.py  tensordict_utils.py
configs/: config.yaml
configs/cluster/: example.yaml
configs/dataloader/: era5downscaling-hdf5.yaml
configs/module/: archesweathersr.yaml
scripts/: dl_era.py  rollout_archesweathergen.py
